finished most of the background & motivation chapter.

--- a/Thesis.tex
+++ b/Thesis.tex
@@ -16,10 +16,16 @@ I claim sole credit for everything in this thesis.
 \tableofcontents
 \mainmatter
 
-\include{Chapter1}
-\include{Chapter2}
-\include{Chapter3}
-\include{Chapter4}
+\include{intro}
+
+\include{background} % background and motivation
+\include{semileptonic} % heavy semileptonic decays
+\include{latticeqcd} % lattice qcd
+\include{latticecalcs} % lattice simulations
+
+\include{nrqcd} % NRQCD studies
+\include{BsDsstar} % Bs-Ds* at zero recoil with Heavy HISQ
+\include{BsDs} % Bs-Ds for all q^2 with Heavy HISQ
 
 % \appendix
 
