--- a/TitlePage.tex
+++ b/TitlePage.tex
@@ -1,9 +1,9 @@
 \begin{titlepage}
 \begin{center}
 \vspace*{0.8cm}
-\noindent {\Huge \textbf{Heavy Semileptonic Form Factors from Lattice Quantum Chromodynamics}} \\
+\noindent {\Huge \textbf{Heavy Meson Semileptonic Form Factors from Lattice Quantum Chromodynamics}} \\
 \vspace*{0.5cm}
-\noindent \LARGE \emph{Euan McLean} \\
+\noindent \LARGE Euan McLean \\
 \vspace*{1.3cm}
 \noindent \large \emph{Supervised by Prof. Christine Davies} \\
 \vspace*{0.8cm}
@@ -13,7 +13,7 @@
 \vspace*{0.8cm}
 \noindent \large \emph{April 2019} \\
 \vspace*{1.3cm}
-\includegraphics[width=100px]{images/logo-glasgow-small.png}
+\includegraphics[width=80px]{images/logo-glasgow-small.png}
 
 \vspace*{0.3cm}
 
@@ -24,19 +24,18 @@
 \end{center}
 
 \cleardoublepage
-\begin{vcenterpage}
-\noindent\rule[2pt]{\textwidth}{0.5pt}
-\begin{center}
-{\large\textbf{Heavy Semileptonic Form Factors from Lattice Quantum Chromodynamics}}
-\end{center}
-{\large\textbf{Abstract:}}
-\\
-I did some lattice
-\\
-\noindent\rule[2pt]{\textwidth}{0.5pt}
-\end{vcenterpage}
+%% \begin{vcenterpage}
+%% \noindent\rule[2pt]{\textwidth}{0.5pt}
+%% \begin{center}
+%% {\large\textbf{Heavy Semileptonic Form Factors from Lattice Quantum Chromodynamics}}
+%% \end{center}
+%% {\large\textbf{Abstract:}}
+%% \\
 
-\cleardoublepage
+
+%% \noindent\rule[2pt]{\textwidth}{0.5pt}
+%% \end{vcenterpage}
+%% \cleardoublepage
 
 \begin{vcenterpage}
 \noindent\rule[2pt]{\textwidth}{0.5pt}
@@ -56,7 +55,7 @@ All results and figures presented in these chapters are my own, except for ...
 
 \vspace*{\stretch{2}}
 \begin{center}
- \emph{please help i am trapped in this computer}
+  \emph{'Part of being a winner is knowing when enough is enough. Sometimes you have to give up the fight and walk away, and move on to something that's more productive.'} - Donald Trump
 \end{center}
 \vspace{\stretch{3}}
 
