--- a/gunk/all.bib
+++ b/gunk/all.bib
@@ -1,92 +1,4 @@
 
-@article{Abe:2001yf,
-      author         = "Abe, Kazuo and others",
-            title          = "{Measurement of B(anti-B0 ---> D+ l- anti-nu) and
-                        determination of |V(cb)|}",
-			      collaboration  = "Belle",
-			            journal        = "Phys. Lett.",
-				          volume         = "B526",
-					        year           = "2002",
-						      pages          = "258-268",
-						            doi            = "10.1016/S0370-2693(01)01483-6",
-							          eprint         = "hep-ex/0111082",
-								        archivePrefix  = "arXiv",
-									      primaryClass   = "hep-ex",
-									            reportNumber   = "KEK-PREPRINT-2001-150, BELLE-PREPRINT-2001-20",
-										          SLACcitation   = "%%CITATION = HEP-EX/0111082;%%"
-											  }
-
-
-@article{Bartelt:1998dq,
-      author         = "Bartelt, John E. and others",
-            title          = "{Measurement of the B ---> D lepton neutrino branching
-                        fractions and form-factor}",
-			      collaboration  = "CLEO",
-			            journal        = "Phys. Rev. Lett.",
-				          volume         = "82",
-					        year           = "1999",
-						      pages          = "3746",
-						            doi            = "10.1103/PhysRevLett.82.3746",
-							          eprint         = "hep-ex/9811042",
-								        archivePrefix  = "arXiv",
-									      primaryClass   = "hep-ex",
-									            reportNumber   = "SLAC-REPRINT-1998-103, CLNS-98-1594, CLEO-98-18",
-										          SLACcitation   = "%%CITATION = HEP-EX/9811042;%%"
-											  }
-
-@article{Aubert:2009ac,
-      author         = "Aubert, Bernard and others",
-            title          = "{Measurement of |V(cb)| and the Form-Factor Slope in B ---> D l- anti-nu Decays in Events Tagged by a
-                        Fully Reconstructed B Meson}",
-			      collaboration  = "BaBar",
-			            journal        = "Phys. Rev. Lett.",
-				          volume         = "104",
-					        year           = "2010",
-						      pages          = "011802",
-						            doi            = "10.1103/PhysRevLett.104.011802",
-							          eprint         = "0904.4063",
-								        archivePrefix  = "arXiv",
-									      primaryClass   = "hep-ex",
-									            reportNumber   = "BABAR-PUB-09-009, SLAC-PUB-13580",
-										          SLACcitation   = "%%CITATION = ARXIV:0904.4063;%%"
-											  }
-
-@article{Aubert:2008yv,
-      author         = "Aubert, Bernard and others",
-            title          = "{Measurements of the Semileptonic Decays anti-B ---> D l
-                        anti-nu and anti-B ---> D* l anti-nu Using a Global Fit to
-                        D X l anti-nu Final States}",
-			      collaboration  = "BaBar",
-			            journal        = "Phys. Rev.",
-				          volume         = "D79",
-					        year           = "2009",
-						      pages          = "012002",
-						            doi            = "10.1103/PhysRevD.79.012002",
-							          eprint         = "0809.0828",
-								        archivePrefix  = "arXiv",
-									      primaryClass   = "hep-ex",
-									            reportNumber   = "SLAC-PUB-13371, BABAR-PUB-08-027",
-										          SLACcitation   = "%%CITATION = ARXIV:0809.0828;%%"
-											  }
-
-@article{Bigi:1996si,
-      author         = "Bigi, Ikaros I. Y. and Shifman, Mikhail A. and Uraltsev,
-                        N. and Vainshtein, Arkady I.",
-			      title          = "{High power $n$ of $m_b$ in beauty widths and $n=5 \to \infty$ limit}",
-			      journal        = "Phys. Rev.",
-			            volume         = "D56",
-				          year           = "1997",
-					        pages          = "4017-4030",
-						      doi            = "10.1103/PhysRevD.56.4017",
-						            note           = "[,205(1996)]",
-							          eprint         = "hep-ph/9704245",
-								        archivePrefix  = "arXiv",
-									      primaryClass   = "hep-ph",
-									            reportNumber   = "CERN-TH-96-191, TPI-MINN-96-13-T, UMN-TH-1506-96,
-                        UND-HEP-97-BIG02",
-			      SLACcitation   = "%%CITATION = HEP-PH/9704245;%%"
-			      }
-
 @article{BUSKULIC1995236,
 title = "A measurement of $|Vcb|$ from $B^0 \to D^*l^-\nu_l$",
 journal = "Physics Letters B",
@@ -907,6 +819,18 @@ url = "http://www.sciencedirect.com/science/article/pii/037026939290571K",
 author = "I.S. Altarev and Yu.V. Borisov and N.V. Borovikova and S.N. Ivanov and E.A. Kolomensky and M.S. Lasakov and V.M. Lobashev and V.A. Nazarenko and A.N. Pirozhkov and A.P. Serebrov and Yu.V. Sobolev and E.V. Shulgina and A.I. Yegorov"
 }
 
+@article{Patrignani:2016xqp,
+      author         = "Patrignani, C. and others",
+      title          = "{Review of Particle Physics}",
+      collaboration  = "Particle Data Group",
+      journal        = "Chin. Phys.",
+      volume         = "C40",
+      year           = "2016",
+      number         = "10",
+      pages          = "100001",
+      doi            = "10.1088/1674-1137/40/10/100001",
+      SLACcitation   = "%%CITATION = CHPHD,C40,100001;%%"
+							    }
 							    
 
 @article{PhysRevLett.30.1343,
@@ -992,6 +916,24 @@ author = "I.S. Altarev and Yu.V. Borisov and N.V. Borovikova and S.N. Ivanov and
       primaryClass   = "hep-lat",
       SLACcitation   = "%%CITATION = ARXIV:1302.2644;%%"
 }
+
+@Comment @article{Bigi:1996si,
+@Comment       author         = "Bigi, Ikaros I. Y. and Shifman, Mikhail A. and Uraltsev,
+@Comment                         N. and Vainshtein, Arkady I.",
+@Comment 			      title          = "{High power $n$ of $m_b$ in beauty widths and $n=5 \to \infty$ limit}",
+@Comment 			      journal        = "Phys. Rev.",
+@Comment 			            volume         = "D56",
+@Comment 				          year           = "1997",
+@Comment 					        pages          = "4017-4030",
+@Comment 						      doi            = "10.1103/PhysRevD.56.4017",
+@Comment 						            note           = "[,205(1996)]",
+@Comment 							          eprint         = "hep-ph/9704245",
+@Comment 								        archivePrefix  = "arXiv",
+@Comment 									      primaryClass   = "hep-ph",
+@Comment 									            reportNumber   = "CERN-TH-96-191, TPI-MINN-96-13-T, UMN-TH-1506-96,
+@Comment                         UND-HEP-97-BIG02",
+@Comment 			      SLACcitation   = "%%CITATION = HEP-PH/9704245;%%"
+@Comment 			      }
 			      
 @article{Hoang:1998hm,
       author         = "Hoang, Andre H. and Ligeti, Zoltan and Manohar, Aneesh
@@ -1008,7 +950,8 @@ author = "I.S. Altarev and Yu.V. Borisov and N.V. Borovikova and S.N. Ivanov and
 									            reportNumber   = "UCSD-PTH-98-32, CERN-TH-98-334, FERMILAB-PUB-98-351-T",
 										          SLACcitation   = "%%CITATION = HEP-PH/9811239;%%"
 											  }
-									
+											  
+
 @article{Bailey:2014tva,
       author         = "Bailey, Jon A. and others",
             title          = "{Update of $|V_{cb}|$ from the $\bar{B}\to                                                                   
@@ -1802,6 +1745,18 @@ url = "http://www.sciencedirect.com/science/article/pii/037026939290571K",
 author = "I.S. Altarev and Yu.V. Borisov and N.V. Borovikova and S.N. Ivanov and E.A. Kolomensky and M.S. Lasakov and V.M. Lobashev and V.A. Nazarenko and A.N. Pirozhkov and A.P. Serebrov and Yu.V. Sobolev and E.V. Shulgina and A.I. Yegorov"
 }
 
+@article{Patrignani:2016xqp,
+      author         = "Patrignani, C. and others",
+      title          = "{Review of Particle Physics}",
+      collaboration  = "Particle Data Group",
+      journal        = "Chin. Phys.",
+      volume         = "C40",
+      year           = "2016",
+      number         = "10",
+      pages          = "100001",
+      doi            = "10.1088/1674-1137/40/10/100001",
+      SLACcitation   = "%%CITATION = CHPHD,C40,100001;%%"
+							    }
 							    
 
 @article{PhysRevLett.30.1343,
@@ -1900,19 +1855,3 @@ doi = "https://doi.org/10.1016/0370-2693(95)01021-H",
 url = "http://www.sciencedirect.com/science/article/pii/037026939501021H",
 author = "D Buskulic et. al"
 }
-
-@article{PhysRevD.98.030001,
-  title = {Review of Particle Physics},
-    author = {Tanabashi, M. et. al.},
-      collaboration = {Particle Data Group},
-        journal = {Phys. Rev. D},
-	  volume = {98},
-	    issue = {3},
-	      pages = {030001},
-	        numpages = {1898},
-		  year = {2018},
-		    month = {Aug},
-		      publisher = {American Physical Society},
-		        doi = {10.1103/PhysRevD.98.030001},
-			  url = {https://link.aps.org/doi/10.1103/PhysRevD.98.030001}
-			  }
